0027070: Segfault when transferring HLR-created shapes via STEPControl_Writer

Added protection against null shape on writing: status IFSelect_RetVoid will be returned in such case (instead of access violation)